--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,48 @@
-.App {
-  text-align: center;
+:root {
+  --mainBlue: #353455;
+  --blue: #5A7394;
+  --beige: #F3E6DC;
+  --light: #B2C8CC;
+  --red: #E73545;
+}
+body {
+  font-family: "Open sans", sans-serif !important;
+  background: var(--light) !important;
+  color: var(--mainBlue) !important;
+}
+.text-title {
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  font-size: 50px;
+  text-transform: capitalize;
+}
+.text-blue {
+  color: var(--blue);
+}
+.text-bright {
+  color: var(--red);
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.btn-square:hover {
+  background: var(--mainBlue);
+  color: var(--light) !important;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.btn-square, .btn-square[disabled]:hover {
+  background: transparent;
+  text-transform: capitalize;
+  font-size: .8rem !important;
+  color: var(--mainBlue) !important;
+  border-radius: 0 !important;
+  border: .1rem solid var(--mainBlue) !important;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-square[disabled] {
+  cursor: default !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cart-icon {
+  cursor: pointer;
+  font-size: 1.2rem;
+  color: var(--red);
 }
